--- a/ChangeLog
+++ b/ChangeLog
@@ -57,6 +57,15 @@ Changes towards version 0.8:
 - New Man Page edition of the user manual (Bug #1204), from Bentley
 - STAR CONTROL trademark information updated to reflect current events (#1201)
 
+Changes towards version 0.7.1:
+- New SDL2 backend for modern operating systems - Micahel
+- Fixed netplay when compiling against modern versions of Visual
+  Studio, from Ala-lala
+
+0.7.0-1: (Maintenance release):
+- Altered header include guard constants to stop conflicts with modern
+  versions of gcc - Michael
+
 0.7.0:
 - Build with debug info in strict-debug mode (bug #1127), from Scott A. Colcord
 - Added spoken Slylandro probe coordinates (bug #732) - Nic, Alex
@@ -412,7 +421,7 @@ Changes towards version 0.8:
 
 0.5:
 - Innocent original c&p bug fixed, from bpoint.
-- Handle relative dirs in -C correctly, from Jan Lönnberg (part of bug #738).
+- Handle relative dirs in -C correctly, from Jan Lï¿½nnberg (part of bug #738).
 - Internationalization fixes: moved many hardcoded English strings
   into string resource file starcon.txt (bug #778), from Andrew Zabolotny
 - Melee Scale and Slides/Movies now take effect immediately - Michael
@@ -506,7 +515,7 @@ Changes towards version 0.8:
   for compilation on VC6. - Alex
 - New 2x scaler 'hq' (by Maxim Stepin; www.hiend3d.com/hq2x.html) - Alex
 - Removed MikMod i/o hacks (using MREADER i/o now; bug #787) - Alex
-- Fixed fast escape weirdness (bug #619) - from Jan Lönnberg
+- Fixed fast escape weirdness (bug #619) - from Jan Lï¿½nnberg
 - New topographical 4x planet surface scaler (bug #786) - Alex
 - Added support for Tremor for Ogg Vorbis decoding (avoids floating point
   math) - SvdB
@@ -620,7 +629,7 @@ Changes towards version 0.8:
   (bug #683) - Michael
 - Fixed crash when restarting Sa-Matra battle after abort (bug #700) -Alex
 - Some cleanups, enabling successful build with GCC 4 (bug #710),
-  mostly from Ville SkyttÃ -SvdB
+  mostly from Ville Skyttï¿½ -SvdB
 - Sa-Matra portrait now fills the portrait space (bug #514), from Nic
 - Updated melee images with original DOS content; should resolve most
   captain portrait issues (bug #183)  -Alex
