Update Core changelog and readme

--- a/README
+++ b/README
@@ -21,6 +21,4 @@ You can find links to downloads, our bug database, and our forum there.
 Have fun!
 
 
-Star Control II is a registered trademark of Accolade, Inc.
-All other trademarks and tradenames belong to their respective owners.
-
+All trademarks and tradenames belong to their respective owners.
