--- a/doc/release/CHANGELOG.txt
+++ b/doc/release/CHANGELOG.txt
@@ -98,6 +98,8 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/)
 - Separate God Mode and infinite battery into new "Precursor Mode"
 
 ### Fixed
+- Fixed crash when buying tech from the Melnorme
+- Loading while in a solar system in HD would put the flagship at the bottom center of the system
 - Loading a save from Classic to HD will no longer spit you out into HyperSpace - Kruzenshtern bug #42
 - Realigned StarBase animation so it takes up the full screen
 - Fixed roaming flagship in Hyperspace when it gets to destination
