Update main release changelog

--- a/doc/release/CHANGELOG.txt
+++ b/doc/release/CHANGELOG.txt
@@ -61,6 +61,7 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/)
 - CHEAT: Remade the old De-Cleansing Mod and added it as an option
 - DOS-style, text-only, "sell minerals" Commander dialog when not using voices - Kruzen
 - Full reimplementation of the "read speed" DOS option when not using voices - Kruzen
+- Pass through allies when auto-pilot is enabled
 
 
 ### Changed
@@ -149,6 +150,7 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/)
 - Fix Flagship speed doubling when going from Save/Load screen straight to navigation
 - Fix SIS speed doubling when going from Save/Load screen straight to interplanetary navigation
 - HD: Remove red outline of defeated ships on the debris screen - Kruzen
+- Remove all alliances that have a broken alliance value during load
 
 
 ## [v0.8.0.85]
